--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,10 @@
     margin: 0;
     padding: 0;
 }
+
+.cabecalho{
+    background-color: beige;
+    color: blue;
+    display: flex;
+    justify-content: space-around;
+}
