--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+font-family: "Roboto", sans-serif;
+}
+
 .cabecalho{
     background-color: beige;
     color: blue;
@@ -18,6 +24,12 @@
     font-size: 24px;
 }
 
+.cabecalho-imagem{
+width: 120px;
+    height:80px;
+    border-radius: 30%;
+}
+
 .escola-imagem{
     width: 30%;
 }
@@ -31,7 +43,7 @@
     padding: 24px 0;
 }
 
-.escola-div-conteudo{
+.escola-conteudo{
     width:35%;
 }
 
@@ -56,4 +68,58 @@
 .estudante-titulo{
     text-align: center;
     padding: 24px 0;
+}
+
+.estudante-imagem{
+width: 100px;
+}
+
+.estudante-icone{
+width: 24px;
+    padding: 4px 8px;
+}
+
+.rodape{
+background-color: #424e61;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+}
+
+.rodape-imagem{
+height: 60px;
+    padding: 12px 0;
+}
+
+
+@media (max-width: 768ṕx) {
+.cabecalho{
+    flex-direction: colum;
+    text-align: center;
+}
+
+.cabecalho-lista-item{
+display: block;
+    margin: 8px 0;
+}
+
+.escola{
+flex-direction: colum;
+    text-align: center;
+    padding: 16px;
+}
+
+escola-imagem{
+width: 80%;
+    margin-top: 16px;
+}
+
+.escola-conteudo{
+width: 100%;
+}
+
+.estudante-todos{
+grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    padding: 0 16px;
+}
 }
