--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+header a{
+    color: white;
+    text-decoration: none;
+}
+
+header a:hover{
+color: bisque;
+}
+
 body{
 font-family: "Roboto", sans-serif;
 }
